# aesg

./: .gitignore  README.md  USER_GUIDE.md  pyproject.toml
.github/workflows/: publish.yml
aesg/: __init__.py  config.py  exceptions.py  validation.py
aesg/architectures/: __init__.py  image.py  text.py
aesg/benchmarks/: __init__.py  colorization.py
aesg/data/: __init__.py  adapters.py
aesg/evaluation/: __init__.py  metrics.py
aesg/graph/: __init__.py  cognitive_engine.py  core.py
aesg/memory/: __init__.py  context.py  controller.py  modes.py  navigation.py  state.py
aesg/nn/: __init__.py  cnn.py  rnn.py  transformer.py
aesg/packs/: __init__.py  export.py  format.py  manager.py
aesg/storage/: __init__.py  engine.py  logger.py
aesg/tools/: __init__.py  evolution_tracker.py  explain.py  export.py
aesg/trainer/: __init__.py  callbacks.py  dual_trainer.py  trainer.py
benchmarks/: benchmark_suite.py  run_all.py  run_sim.py
benchmarks/results/: metrics.json  report.md
